force-app/main/default/objects/BrillioFC__Profile_Match__c/BrillioFC__Profile_Match__c.object-meta.xml
<CustomObject>
    <label>Profile Match</label>
    <nameField>
        <label>Profile Match Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Profile Matchs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>