force-app/main/default/objects/BrillioFC__Profile_Match__c/fields/BrillioFC__Matching_Profile__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__Matching_Profile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Matching Profile</label>
    <referenceTo>BrillioFC__Profile_Detail__c</referenceTo>
    <relationshipLabel>Profile Matches (Matching Profile)</relationshipLabel>
    <relationshipName>Matches</relationshipName>
    <type>Lookup</type>
</CustomField>