force-app/main/default/objects/BrillioFC__Profile_Match__c/fields/BrillioFC__Percentage__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__Percentage__c</fullName>
    <label>Percentage</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>