force-app/main/default/objects/BrillioFC__Profile_Match__c/fields/BrillioFC__Profile_Name__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__Profile_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Profile Name</label>
    <referenceTo>BrillioFC__Profile_Detail__c</referenceTo>
    <relationshipLabel>Profile Matches</relationshipLabel>
    <relationshipName>Profile_Matches</relationshipName>
    <type>Lookup</type>
</CustomField>